# lasercam_aim

./: .gitignore  AGENTS.md  CLAUDE.md  LaserMark.jsx  README.md  _test_app.py  _test_extract.py  app_output.txt  diag.py  diag2.py  diag3.py  diag4.py  diag_final.py  generate_marker.py  install_meerk40t_plugins.bat  lasercam.json  launch_lasercam.bat  requirements.txt  run_lasercam.bat  setup.py  start_servers.bat  test_ruida_comm.py  test_ruida_protocol.py  ui_diff.txt
.opencode/plans/: ImplementationPlan.md
docs/: architecture-cpp.md  architecture.md  dependency-graph.md  inventory.md  modules.md  simulator.md  test-summary.md  ui-specifications.md
docs/archive/: 1-camera-simulator.md  2-advanced-marker-navigation.md  3-controller-and-fov-calibration.md  IMPROVEMENTS.md  ROLES.md  bridge-lightburn.md  evaluator.md  julus.md  product.md  simulator.md  skills.md  structure.md  tech.md  vision.md  workflow-print-and-cut.md
docs/calibration/: laser-camera-offset.md
docs/controllers/: grbl-protocol.md  ruida-protocol.md
docs/markers/: direction-detection.md  marker-design.md  recognition-pipeline.md
docs/migration/: lightburn-to-meerk40t.md
docs/prototype/: camera-emulator-plugin.md  communication-protocol.md  laser-emulator-plugin.md  meerk40t-integration.md  testing-plan.md
final/: CMakeLists.txt
final/src/: main.cpp
final/src/camera/: CameraInterface.h
final/src/controllers/: GRBLController.cpp  GRBLController.h  RuidaController.cpp  RuidaController.h
final/src/core/: AppState.h  BaseController.cpp  BaseController.h  CalibrationManager.cpp  CalibrationManager.h
final/src/recognizer/: MarkerRecognizer.cpp  MarkerRecognizer.h
final/src/ui/: CameraView.cpp  CameraView.h  MainWindow.cpp  MainWindow.h
final/tests/: test_calibration.cpp  test_controllers.cpp  test_recognizer.cpp
markers/: heartC+mark_backup.lbrn2
mvp/: app.py  bridge.py  camera.py  camera_simulator.py  config.py  controller.py  main.py  manual_test_recognizer.py  manual_test_simulator.py  recognizer.py  simulator.py  ui.py
mvp/plugins/: __init__.py  camera_emulator.py  laser_emulator.py  run_servers.py  test_plugins_standalone.py  verify_servers.py
mvp/tests/: test_app.py  test_bridge.py  test_camera.py  test_camera_emulator.py  test_camera_simulator.py  test_controller.py  test_ui.py  (+3 more)
(+7 files in other folders)
